workspace/log/build_2023-11-04_18-06-54/template_drone_control/stderr.log
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In lambda function:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:157:16: error: expected ‘{’ before ‘=’ token
  157 |         [x, y] = transform_global_to_local(x, y);
      |                ^
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In member function ‘void TemplateDroneControl::send_position_command(float, float, float, float)’:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:157:48: error: no match for ‘operator=’ (operand types are ‘TemplateDroneControl::send_position_command(float, float, float, float)::<lambda()>’ and ‘std::tuple<float, float>’)
  157 |         [x, y] = transform_global_to_local(x, y);
      |                                                ^
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:157:14: note: candidate: ‘TemplateDroneControl::send_position_command(float, float, float, float)::<lambda()>& TemplateDroneControl::send_position_command(float, float, float, float)::<lambda()>::operator=(const TemplateDroneControl::send_position_command(float, float, float, float)::<lambda()>&)’ <deleted>
  157 |         [x, y] = transform_global_to_local(x, y);
      |              ^
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:157:14: note:   no known conversion for argument 1 from ‘std::tuple<float, float>’ to ‘const TemplateDroneControl::send_position_command(float, float, float, float)::<lambda()>&’
make[2]: *** [CMakeFiles/template_drone_control_node.dir/build.make:63: CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:105: CMakeFiles/template_drone_control_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
